<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/channel_item_number"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/app_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/channel_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_channel_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/channel_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_type"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>
